fix: fix deploy phase, to work on commit files

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -39,6 +39,7 @@ jobs:
         name: wheel
         path: distwhere 
     - name: Deploy to PyPI
+      uses: actions/checkout@v2
       run: |
         make deploy
   clean:
