--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,13 +33,13 @@ jobs:
     if: github.ref == 'refs/heads/main'
   
     steps:
+    - uses: actions/checkout@v2
     - name: Download wheel
       uses: actions/download-artifact@v2
       with:
         name: wheel
         path: distwhere 
     - name: Deploy to PyPI
-      uses: actions/checkout@v2
       run: |
         make deploy
   clean:
